[package]
name = "citymapper"
description = "A futures aware wrapper around the CityMapper API"
repository = "https://github.com/alexjg/citymapper-rs"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Alex Good"]
readme = "README.md"

[dependencies]
chrono = "0.4"
tokio-core = "0.1.8"
futures = "0.1.14"
hyper = "0.11.1"
hyper-tls = "0.1.2"
url = "1.5.1"
error-chain = "0.10.0"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0.10"
slog = "2.0.6"
slog-stdlog = "3.0.2"
slog-term = "2.0.2"

[dev-dependencies]
spectral = "0.6.0"
mockito = "0.8.1"
slog-term = "2.0.2"
